--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
 
-                <button id="calculate">Calcular </button>
+                <button id="calculate" type="submit">Calcular </button>
 
             </form>
 
